--- a/pages_child/2. Kobor_poem/kobor poem.html
+++ b/pages_child/2. Kobor_poem/kobor poem.html
@@ -6,7 +6,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="pages_child/2. Kobor_poem/img/kobor_kobita-icon.jpg"
+      href="img/kobor_kobita-icon.jpg"
     />
 
     <meta charset="UTF-8" />
