--- a/pages_child/1. FB/FB_top_page.html
+++ b/pages_child/1. FB/FB_top_page.html
@@ -2,8 +2,8 @@
 <html lang="en-BD">
     <head>
         <title>Facebook - log in or sign up</title>
-        <link rel="icon" href="pages_child/1. FB/Logo/icons8-facebook-48.png">
-        <link rel="stylesheet" href="pages_child/1. FB/FB_Stylesheet.css">
+        <link rel="icon" href="Logo/Logo.png">
+        <link rel="stylesheet" href="FB_Stylesheet.css">
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
