--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
     </section>
     <!-- End of Footer section -->
 
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
 
 
 </body>
