projects link updated.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 2</h1>
-                        <a href="pages_child/2. Kobor_Poem/kobor poem.html" target="_blank">
+                        <a href="pages_child/2. Kobor_poem/kobor poem.html" target="_blank">
                             কবর কবিতা</a>
                         <p>
                            I have created a page containing কবর কবিতা.
