--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                         <li><a href="#about" data-after="About">About Me</a></li>
                         <li><a href="#projects" data-after="Projects">Projects</a></li>
                         <li><a href="#education" data-after="Education">Education</a></li>
-                        <li><a href="#HR_skill" data-after="HR">HR skill</a></li>
-                        <li><a href="#programming_skill" data-after="Programming">Programing skill</a></li>
-                        <li><a href="#experience" data-after="Experience">Experience</a></li>
+                        <li><a href="#programming_skill" data-after="Programming">Programming skill</a></li>
+                        <!-- <li><a href="#HR_skill" data-after="HR">HR skill</a></li> -->
+                        <!-- <li><a href="#experience" data-after="Experience">Experience</a></li> -->
                         <li><a href="#personal_info" data-after="Personalia">Personal info</a></li>
                         <li><a href="#contact" data-after="Contact">Contact Me</a></li>
                     </ul>
@@ -89,7 +89,7 @@
                     However, I have a deep quest for software engineering since long time tenure. 
                     So I want to learn some skill concerned to this sector & also have a dream to be a software developer.
                 </p>
-                <a href="https://drive.google.com/file/d/1uP9ag7T0xejX45SgcjUqn8W_wSsk18bI/view?usp=share_link" 
+                <a href="https://drive.google.com/file/d/1dHkfi4GrDYTOgDzYHyZEiUYMndGCePc7/view?usp=sharing" 
                     target="blank" class="btn">Download Resume</a>
             </div>
         </div>
@@ -111,58 +111,60 @@
             <div class="all-projects">
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Project 1</h1>
-                        <a href="pages_child/1. FB/FB_top_page.html" target="_blank">
-                            Facebook (demo page)</a>
+                        <!-- <h1>Project 1</h1> -->
+                        <a href="https://summer-champ-school-camping.web.app/" target="_blank">
+                            Summer Champ</a>
                         <p>
-                            I have created a demo of facebook log in page.
-                            It is fully responsive through various display size.
+                            Welcome to the “Summer Champ” Website website. You can check out our special sports events to utilize this summer time at its best.
+
+
                         </p>
                     </div>
                     <div class="project-img">
-                        <img src="images/FB view.jpg" alt="fb_demo_page">
+                        <img src="images/Projects/Summer-Champ.jpg" alt="fb_demo_page">
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Project 2</h1>
-                        <a href="pages_child/2. Kobor_poem/kobor poem.html" target="_blank">
-                            কবর কবিতা</a>
+                        <!-- <h1>Project 2</h1> -->
+                        <a href="https://doll-fairy-world-react-crud.web.app/" target="_blank">
+                            Toy Doll FairyWorld</a>
                         <p>
-                           I have created a page containing কবর কবিতা.
-                           It is a very popular & deep meaning poem.
+                            Welcome you to the Doll FairyWorld.
+                            This is a toy web site where you can find most cutest & lovely toy dolls of variety of categories.
                        </p>
                     </div>
                     <div class="project-img">
-                        <img src="images/Poem view.jpg" alt="poem_demo_page">
+                        <img src="images/Projects/ToyDoll-FairyWorld.jpg" alt="poem_demo_page">
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Project 3</h1>
-                        <a href="pages_child/3. log_in/Log_in form.html" target="_blank">
-                            Log-in form (demo)</a>
+                        <!-- <h1>Project 3</h1> -->
+                        <a href="https://bd-chef-recipe-world-reactauth.web.app/" target="_blank">
+                            BD Chef Recipe World</a>
                         <p>
-                           I have created a demo log-in form.
-                           It contains ID & Password input field & submit button.
+                            This is a demo web site where you can find most artistic chef & their delicious recipe. It resembles Bangladeshis food culture towards the world.
                        </p>
                     </div>
                     <div class="project-img">
-                        <img src="images/Log_in view.jpg" alt="log_in_demo_page">
+                        <img src="images/Projects/BD-Chef_RecipeWorld.jpg" alt="log_in_demo_page">
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Project 4</h1>
-                        <a href="pages_child/4. registration/Reg. form.html" target="_blank">
-                            Registration form (demo)</a>
+                        <!-- <h1>Project 4</h1> -->
+                        <a href="https://aircnc-fullstack-project.web.app/" target="_blank">
+                            AirCNC</a>
                         <p>
-                           I have created a demo registration form.
-                           It contains various data input field & submit button.
+                           This is a demo travel room booking website.
+                           Here you can find the most beautiful resorts.
+                           <br/>
+                           You can also post a place or your room on our site too.
                        </p>
                     </div>
                     <div class="project-img">
-                        <img src="images/Reg view.jpg" alt="reg_demo_page">
+                        <img src="images/Projects/My-AirCNC.jpg" alt="reg_demo_page">
                     </div>
                 </div>
             </div>
@@ -224,61 +226,6 @@
     </section>
     <!-- End of Education section -->
 
-    
-    <!-- Start of HR Skill section -->
-    <section id="HR_skill">
-        <div class="section container">
-            <div class="section-top">
-                <h1 class="section-title"><span>HR </span>Skill</h1>
-                <p>
-                    I have strong passion to pursue 
-                    a career in HR (Human Resource) 
-                    field by utilizing
-                    my knowledge, skills, & competency
-                    and contribute thereby in accomplishing
-                    organizational goals & objectives.
-                </p>
-            </div>
-
-            <div class="section-bottom">
-                <div class="sub-section">
-                    <div class="sub-sec-info">
-                        <img class="icon" src="icon/Trainings.png"/>
-                        <h1>Training Summary</h1>
-                    </div>
-                    <h2>Microsoft Advance Excel (2019)</h2>
-                    <p>Infosoft Valley Ltd. (Uttara, Dhaka)</p> <br/>
-                    <h2>Human Resource Management (2016)</h2>
-                    <p>SCITI, BSCIC. (Banani)</p> <br/>
-                    <h2>Social Compliance & CSR Issues (2017)</h2>
-                    <p>SEIP project, Ministry of Finance, ADB & BKMEA. (N.ganj)</p> <br/>
-                    <h2>MO-KPI based PMS (2018)</h2>
-                    <p>Benchmark (Uttara, Dhaka)</p> <br/>
-                    <h2>Communicative English Language (2016)</h2>
-                    <p>Directorate of Secondary and Higher Education. (Narayanganj)</p>
-                </div>
-
-                <div class="sub-section">
-                    <div class="sub-sec-info">
-                        <img class="icon" src="icon/Skillset.png"/>
-                        <h1>Skill-set</h1>
-                    </div>
-                    <h2>HR Related Skill:</h2>
-                    <p>
-                        HRM & its activities
-                        <span>I</span> HRIS Database
-                        <span>I</span> Bangladesh Labor Law 
-                        <span>I</span> Bangladesh Labor Rules
-                    </p> <br/> <br/> <br/>
-                    <h2>IT Proficiency:</h2>
-                    <p>	Data processing: MS Excel, Word, Power point, Google form.</p>
-                    <p>	Graphics:  Adobe Photoshop, Adobe Ilustrator.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End of HR Skill section -->
-
 
     <!-- Start of Programming Skill section -->
     <section id="programming_skill">
@@ -336,9 +283,65 @@
     </section>
     <!-- End of Programming Skill section -->
 
+    
+    <!-- Start of HR Skill section -->
+    <!-- <section id="HR_skill">
+        <div class="section container">
+            <div class="section-top">
+                <h1 class="section-title"><span>HR </span>Skill</h1>
+                <p>
+                    I have strong passion to pursue 
+                    a career in HR (Human Resource) 
+                    field by utilizing
+                    my knowledge, skills, & competency
+                    and contribute thereby in accomplishing
+                    organizational goals & objectives.
+                </p>
+            </div>
+
+            <div class="section-bottom">
+                <div class="sub-section">
+                    <div class="sub-sec-info">
+                        <img class="icon" src="icon/Trainings.png"/>
+                        <h1>Training Summary</h1>
+                    </div>
+                    <h2>Microsoft Advance Excel (2019)</h2>
+                    <p>Infosoft Valley Ltd. (Uttara, Dhaka)</p> <br/>
+                    <h2>Human Resource Management (2016)</h2>
+                    <p>SCITI, BSCIC. (Banani)</p> <br/>
+                    <h2>Social Compliance & CSR Issues (2017)</h2>
+                    <p>SEIP project, Ministry of Finance, ADB & BKMEA. (N.ganj)</p> <br/>
+                    <h2>MO-KPI based PMS (2018)</h2>
+                    <p>Benchmark (Uttara, Dhaka)</p> <br/>
+                    <h2>Communicative English Language (2016)</h2>
+                    <p>Directorate of Secondary and Higher Education. (Narayanganj)</p>
+                </div>
+
+                <div class="sub-section">
+                    <div class="sub-sec-info">
+                        <img class="icon" src="icon/Skillset.png"/>
+                        <h1>Skill-set</h1>
+                    </div>
+                    <h2>HR Related Skill:</h2>
+                    <p>
+                        HRM & its activities
+                        <span>I</span> HRIS Database
+                        <span>I</span> Bangladesh Labor Law 
+                        <span>I</span> Bangladesh Labor Rules
+                    </p> <br/> <br/> <br/>
+                    <h2>IT Proficiency:</h2>
+                    <p>	Data processing: MS Excel, Word, Power point, Google form.</p>
+                    <p>	Graphics:  Adobe Photoshop, Adobe Ilustrator.</p>
+                </div>
+            </div>
+        </div>
+    </section> -->
+    <!-- End of HR Skill section -->
+
+
 
     <!-- Start of Experience section -->
-    <section id="experience">
+    <!-- <section id="experience">
         <div class="section container">
             <div class="section-top">
                 <h1 class="section-title"><span>Exp</span>erience</h1>
@@ -399,7 +402,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End of Experience section -->
 
 
